[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/hud/textModal.png" type="Texture" id=1]
[ext_resource path="res://fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Hud.gd" type="Script" id=3]
[ext_resource path="res://samples/typing.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/hud/cross.png" type="Texture" id=5]
[ext_resource path="res://sprites/phase4/auguste_l1_strip12.png" type="Texture" id=6]
[ext_resource path="res://sprites/phase4/auguste_l5_strip12.png" type="Texture" id=7]
[ext_resource path="res://sprites/phase4/auguste_l6_strip12.png" type="Texture" id=8]
[ext_resource path="res://sprites/phase4/auguste_l7_strip12.png" type="Texture" id=9]
[ext_resource path="res://sprites/phase4/auguste_l2_strip12.png" type="Texture" id=10]
[ext_resource path="res://sprites/phase4/auguste_l3_strip12.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextModal" type="NinePatchRect" parent="."]
anchor_left = 0.256
anchor_top = 0.8
anchor_right = 0.744
anchor_bottom = 0.955
margin_left = -0.144012
margin_top = 3.05176e-05
margin_right = 0.143982
margin_bottom = 7.00006
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextModal"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 11.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 1 )
text = "lorem ipsum dolor samet"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTimer" type="Timer" parent="TextModal"]
wait_time = 1.5
one_shot = true

[node name="AudioTyping" type="AudioStreamPlayer" parent="TextModal"]
stream = ExtResource( 4 )
bus = "FX"

[node name="BtnClose" type="TextureButton" parent="."]
anchor_left = 0.948
anchor_right = 0.996
anchor_bottom = 0.091
margin_left = -0.447144
margin_top = 4.8726
margin_right = 0.400879
margin_bottom = 0.272602
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HudName" type="Node2D" parent="."]
position = Vector2( 418.169, 38.8726 )
__meta__ = {
"_edit_group_": true
}

[node name="SpriteA" type="Sprite" parent="HudName"]
texture = ExtResource( 6 )
hframes = 12

[node name="SpriteU" type="Sprite" parent="HudName"]
position = Vector2( 33, 0 )
texture = ExtResource( 10 )
hframes = 12

[node name="SpriteG" type="Sprite" parent="HudName"]
position = Vector2( 65, 0 )
texture = ExtResource( 11 )
hframes = 12

[node name="SpriteU2" type="Sprite" parent="HudName"]
position = Vector2( 96.5, 0 )
texture = ExtResource( 10 )
hframes = 12

[node name="SpriteS" type="Sprite" parent="HudName"]
position = Vector2( 125.5, 0 )
texture = ExtResource( 7 )
hframes = 12

[node name="SpriteT" type="Sprite" parent="HudName"]
position = Vector2( 154.5, 0 )
texture = ExtResource( 8 )
hframes = 12

[node name="SpriteE" type="Sprite" parent="HudName"]
position = Vector2( 184.5, 0 )
texture = ExtResource( 9 )
hframes = 12
[connection signal="timeout" from="TextModal/LabelTimer" to="." method="_on_LabelTimer_timeout"]
[connection signal="pressed" from="BtnClose" to="." method="_on_BtnClose_pressed"]
